Update ticker with tech news

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       </section>
       <footer class="ticker">
         <span id="ticker-text"
-          >RETRO SYS V1.5 &mdash; GL HF &mdash; SPECTRUM ENGINE ONLINE &mdash;
-          ACHTE AUF DIE CRT-GLITCHES &mdash;</span
+          >Tech-News: EU einigt sich auf KI-Regeln &mdash; Nvidia präsentiert
+          neue RTX-5000-Serie &mdash; Open-Source-Chips gewinnen an Fahrt &mdash;
+          Start-ups setzen stärker auf Edge-Computing</span
         >
       </footer>
     </main>
