Add live tech news ticker

--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
         </aside>
       </section>
       <footer class="ticker">
-        <span id="ticker-text"
-          >RETRO SYS V1.5 &mdash; GL HF &mdash; SPECTRUM ENGINE ONLINE &mdash;
-          ACHTE AUF DIE CRT-GLITCHES &mdash;</span
-        >
+        <span id="ticker-text">Tech-News werden geladen...</span>
       </footer>
     </main>
     <template id="tile-template">
