Update footer ticker text in index.html

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
       </section>
       <footer class="ticker">
         <span id="ticker-text"
-          >Tech-News: EU einigt sich auf KI-Regeln &mdash; Nvidia präsentiert
-          neue RTX-5000-Serie &mdash; Open-Source-Chips gewinnen an Fahrt &mdash;
-          Start-ups setzen stärker auf Edge-Computing</span
+          >RETRO SYS V1.5 &mdash; Made By ChatGPT Codex</span
         >
       </footer>
     </main>
